--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ pandas>=1.3.0
 matplotlib>=3.4.0
 schedule>=1.1.0
 numpy>=1.20.0
+python-dotenv>=0.19.0
+ta-lib>=0.4.24
+pytz>=2021.1
+seaborn>=0.11.2
+jinja2>=3.0.0
+python-dateutil>=2.8.2
