--- a/src/config/alert_config_example.ini
+++ b/src/config/alert_config_example.ini
@@ -14,7 +14,7 @@ signal_threshold = 6
 [conditions]
 # 条件控制部分
 # 是否启用RSI指标检查
-enable_rsi_check = true
+enable_rsi_check = false
 
 # 是否启用价格与EMA偏离检查
 enable_price_ema_check = true
