--- a/src/config/alert_config.ini
+++ b/src/config/alert_config.ini
@@ -5,8 +5,9 @@ feishu_webhook = https://open.feishu.cn/open-apis/bot/v2/hook/299bd0bd-aa27-4f90
 # 信号消失后的冷静期时间（分钟），超过此时间才会重置状态
 cooldown_minutes = 60
 
-# 触发信号所需的最低分数
-signal_threshold = 2
+# 触发信号所需的最低分数（建议设置为理论最高分的50%-80%）
+# 当前理论最高分为7分，设置为60%即4分
+signal_threshold = 4
 
 [conditions]
 # 条件控制部分
@@ -49,15 +50,15 @@ atr_ratio = 1.1
 volume_ratio = 1.3
 
 # ZigZag指标的偏差百分比，用于过滤小波动
-zigzag_deviation = 5
+zigzag_deviation = 1
 
 # ZigZag指标的极轴腿数量，用于控制转折点识别的灵敏度
-zigzag_depth = 12
+zigzag_depth = 6
 
 [scores]
 # 各项指标的分数权重配置
-# 注意：理论最高分 = ema_15m_score + ema_1h_score + rsi_score + price_ema_gap_score + atr_score + volume_score + zigzag_score
-# 当前配置下的理论最高分 = 2 + 2 + 1 + 1 + 2 + 2 + 2 = 12分
+# 注意：理论最高分 = ema_15m_score + ema_1h_score + rsi_score(如果启用) + price_ema_gap_score(如果启用) + atr_score(如果启用) + volume_score(如果启用) + zigzag_score(如果启用)
+# 当前配置下的理论最高分 = 2 + 2 + 1 + 2 + 0 + 0 + 2 = 7分
 # 建议将 signal_threshold 设置为理论最高分的 50%-80% 之间
 
 # EMA趋势评分
